<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/principal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="173dp"
        android:layout_height="159dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginTitle"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.050000012" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.13">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/hintEmail"
            android:inputType="text"
            android:shadowColor="#EAEAEA"
            android:textColor="@color/secondary"
            android:textColorHighlight="@color/secondary"
            android:textColorHint="@color/secondary"
            android:textColorLink="@color/secondary"
            android:textCursorDrawable="@color/secondary"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/hintPassword"
            android:inputType="text"
            android:textColor="@color/secondary"
            android:textColorHighlight="@color/secondary"
            android:textColorHint="@color/secondary"
            android:textColorLink="@color/secondary"
            android:textSize="17sp" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/pink"
            android:text="@string/btLogin"
            android:textColor="@color/white"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/alreadyHaveAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/common_google_signin_btn_tint"
            android:text="@string/btDontHaveAccount" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>